Ataulização com o RSA

--- a/Assignment_1/FirstDraft.ipynb
+++ b/Assignment_1/FirstDraft.ipynb
@@ -40,16 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import timeit\n",
-    "\n",
-    "from cryptography.hazmat.primitives import hashes, padding\n",
-    "from cryptography.hazmat.primitives.asymmetric import rsa\n",
-    "from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes"
+    "import timeit"
    ]
   },
   {
@@ -66,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,26 +91,58 @@
    "metadata": {},
    "source": [
     "### B. Encrypting and decrypting using AES\n",
-    "To get statistically significant results we will repeat the encription->decription procedure several times for each file \n",
+    "To get statistically significant results we will repeat the encription->decription procedure several times for each file <br>\n",
     "We will be using padding  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes\n",
+    "from cryptography.hazmat.primitives import padding\n",
+    "from cryptography.hazmat.backends import default_backend\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 bytes: encryption time:  86.54800039948896 micros, decryption time:  83.95799872232601 micros\n",
-      "64 bytes: encryption time:  41.098998044617474 micros, decryption time:  40.800999267958105 micros\n",
-      "512 bytes: encryption time:  40.63500004122034 micros, decryption time:  39.61299953516573 micros\n",
-      "4096 bytes: encryption time:  49.116000009234995 micros, decryption time:  45.4130006255582 micros\n",
-      "32768 bytes: encryption time:  114.64500101283193 micros, decryption time:  83.27199990162626 micros\n",
-      "262144 bytes: encryption time:  365.3510008007288 micros, decryption time:  162.76700131129473 micros\n",
-      "2097152 bytes: encryption time:  5284.178002038971 micros, decryption time:  3797.110998420976 micros\n"
+      "8 bytes:\n",
+      "Encryption time:  130.21100 microsegundos\n",
+      "Decryption time:  124.02800 microsegundos\n",
+      "\n",
+      "64 bytes:\n",
+      "Encryption time:  86.08000 microsegundos\n",
+      "Decryption time:  86.32400 microsegundos\n",
+      "\n",
+      "512 bytes:\n",
+      "Encryption time:  134.44300 microsegundos\n",
+      "Decryption time:  130.89800 microsegundos\n",
+      "\n",
+      "4096 bytes:\n",
+      "Encryption time:  125.07400 microsegundos\n",
+      "Decryption time:  115.26900 microsegundos\n",
+      "\n",
+      "32768 bytes:\n",
+      "Encryption time:  195.57600 microsegundos\n",
+      "Decryption time:  138.64400 microsegundos\n",
+      "\n",
+      "262144 bytes:\n",
+      "Encryption time:  865.40700 microsegundos\n",
+      "Decryption time:  408.32700 microsegundos\n",
+      "\n",
+      "2097152 bytes:\n",
+      "Encryption time:  13350.93200 microsegundos\n",
+      "Decryption time:  8674.94800 microsegundos\n",
+      "\n"
      ]
     }
    ],
@@ -142,7 +170,8 @@
     "\n",
     "    return unpadder.update(decrypted) + unpadder.finalize()\n",
     "\n",
-    "resultados_AES = []\n",
+    "tempos_enc_AES = []\n",
+    "tempos_dec_AES = []\n",
     "reps = 100\n",
     "\n",
     "for t in tamanhosAES:\n",
@@ -169,9 +198,13 @@
     "    tempo_enc *= 1e6 #converte para microsegundos\n",
     "    tempo_dec *= 1e6\n",
     "\n",
-    "    resultados_AES.append((t, tempo_enc, tempo_dec))\n",
+    "    tempos_enc_AES.append(tempo_enc)\n",
+    "    tempos_dec_AES.append(tempo_dec)\n",
     "\n",
-    "    print(t , \"bytes: encryption time: \", tempo_enc, \"micros, decryption time: \", tempo_dec, \"micros\")\n"
+    "    print(t ,\"bytes:\")\n",
+    "    print(f\"Encryption time: {tempo_enc: .5f} microsegundos\")\n",
+    "    print(f\"Decryption time: {tempo_dec: .5f} microsegundos\")\n",
+    "    print(\"\")\n"
    ]
   },
   {
@@ -180,6 +213,13 @@
    "source": [
     "#### B.1. Comparing AES Results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -194,6 +234,105 @@
    "source": [
     "### C. Encrypting and decrypting with RSA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.hazmat.primitives import hashes\n",
+    "from cryptography.hazmat.primitives.asymmetric import rsa, padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 bytes - encryption time: 146.63 microssegundos and decryption time: 1752.23 microsegundos\n",
+      "64 bytes - encryption time: 111.06 microssegundos and decryption time: 1401.26 microsegundos\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Encryption failed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 38\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(reps):\n\u001b[0;32m     37\u001b[0m     start \u001b[38;5;241m=\u001b[39m timeit\u001b[38;5;241m.\u001b[39mdefault_timer()\n\u001b[1;32m---> 38\u001b[0m     encrypted \u001b[38;5;241m=\u001b[39m encrypt_RSA(original)\n\u001b[0;32m     39\u001b[0m     end \u001b[38;5;241m=\u001b[39m timeit\u001b[38;5;241m.\u001b[39mdefault_timer()\n\u001b[0;32m     40\u001b[0m     tempo_enc \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m end \u001b[38;5;241m-\u001b[39m start\n",
+      "Cell \u001b[1;32mIn[17], line 5\u001b[0m, in \u001b[0;36mencrypt_RSA\u001b[1;34m(original)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mencrypt_RSA\u001b[39m(original):\n\u001b[1;32m----> 5\u001b[0m     encrypted \u001b[38;5;241m=\u001b[39m public_key\u001b[38;5;241m.\u001b[39mencrypt(\n\u001b[0;32m      6\u001b[0m         original, \n\u001b[0;32m      7\u001b[0m         padding\u001b[38;5;241m.\u001b[39mOAEP(\n\u001b[0;32m      8\u001b[0m             mgf\u001b[38;5;241m=\u001b[39mpadding\u001b[38;5;241m.\u001b[39mMGF1(algorithm\u001b[38;5;241m=\u001b[39mhashes\u001b[38;5;241m.\u001b[39mSHA256()),\n\u001b[0;32m      9\u001b[0m             algorithm\u001b[38;5;241m=\u001b[39mhashes\u001b[38;5;241m.\u001b[39mSHA256(),\n\u001b[0;32m     10\u001b[0m             label\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     11\u001b[0m         )\n\u001b[0;32m     12\u001b[0m     )\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m encrypted\n",
+      "\u001b[1;31mValueError\u001b[0m: Encryption failed"
+     ]
+    }
+   ],
+   "source": [
+    "private_key = rsa.generate_private_key(public_exponent=65537,key_size=2048,backend=default_backend())\n",
+    "public_key =private_key.public_key()\n",
+    "\n",
+    "def encrypt_RSA(original):\n",
+    "    encrypted = public_key.encrypt(\n",
+    "        original, \n",
+    "        padding.OAEP(\n",
+    "            mgf=padding.MGF1(algorithm=hashes.SHA256()),\n",
+    "            algorithm=hashes.SHA256(),\n",
+    "            label=None\n",
+    "        )\n",
+    "    )\n",
+    "    return encrypted\n",
+    "\n",
+    "def decrypt_RSA(encrypted):\n",
+    "    decrypted = private_key.decrypt(\n",
+    "        encrypted, \n",
+    "        padding.OAEP(\n",
+    "            mgf=padding.MGF1(algorithm=hashes.SHA256()),\n",
+    "            algorithm=hashes.SHA256(),\n",
+    "            label=None\n",
+    "        )\n",
+    "    )\n",
+    "    return decrypted\n",
+    "\n",
+    "resultados_RSA = []\n",
+    "reps = 100\n",
+    "\n",
+    "for t in tamanhosRSA:\n",
+    "    with open(f\"Ficheiros/RSA_{t}.txt\",\"rb\") as file:\n",
+    "        original = file.read()\n",
+    "\n",
+    "    tempo_enc = 0\n",
+    "    tempo_dec = 0\n",
+    "    \n",
+    "    for i in range(reps):\n",
+    "        start = timeit.default_timer()\n",
+    "        encrypted = encrypt_RSA(original)\n",
+    "        end = timeit.default_timer()\n",
+    "        tempo_enc += end - start\n",
+    "\n",
+    "        start = timeit.default_timer()\n",
+    "        decrypt_RSA(encrypted)\n",
+    "        end = timeit.default_timer()\n",
+    "        tempo_dec += end - start\n",
+    "\n",
+    "    tempo_enc /= reps\n",
+    "    tempo_dec /= reps\n",
+    "\n",
+    "    tempo_enc *= 1e6 #converte para microsegundos\n",
+    "    tempo_dec *= 1e6\n",
+    "\n",
+    "    resultados_RSA.append((t, tempo_enc, tempo_dec))\n",
+    "\n",
+    "    print(t , f\"bytes - encryption time:{tempo_enc: .2f} microssegundos and decryption time:{tempo_dec: .2f} microsegundos\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
